--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -36,6 +36,7 @@ catalog:
   '@react-aria/utils': ^3.23.2
   '@react-stately/collections': ^3.10.0
   '@react-stately/list': ^3.9.1
+  '@react-aria/visually-hidden': ^3.8.3
 
   yup: ^0.32.11
 
