chore: hide op superuser features with flag

--- a/apps/evm/.env.test
+++ b/apps/evm/.env.test
@@ -12,3 +12,4 @@ SENTRY_AUTH_TOKEN=
 KV_REST_API_URL=
 KV_REST_API_TOKEN=
 NEXT_PUBLIC_FEATURE_FLAG_TOP_100_SPICE_USERS=enabled
+NEXT_PUBLIC_FEATURE_FLAG_OP_SUPERUSER=enabled
