--- a/apps/bob-pay/package.json
+++ b/apps/bob-pay/package.json
@@ -26,7 +26,7 @@
     "@gobob/tokens": "workspace:^",
     "@gobob/ui": "workspace:^",
     "@gobob/utils": "workspace:^",
-    "@next/third-parties": "^15.0.3",
+    "@next/third-parties": "catalog:",
     "@lingui/core": "catalog:",
     "@lingui/react": "catalog:",
     "@react-aria/tag": "^3.4.7",
