--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -28,7 +28,7 @@
     "@gobob/utils": "workspace:^",
     "@lingui/core": "catalog:",
     "@lingui/react": "catalog:",
-    "@next/third-parties": "^15.0.3",
+    "@next/third-parties": "catalog:",
     "@react-aria/button": "catalog:",
     "@react-aria/focus": "catalog:",
     "@react-aria/interactions": "catalog:",
