--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -52,6 +52,7 @@ catalog:
 
   next: ^14.2.15
   '@sentry/nextjs': ^8.30.0
+  '@next/third-parties': ^15.0.3
   negotiator: ^0.6.3
   '@types/negotiator': ^0.6.3
 
