--- a/apps/bob-pay/.env.test
+++ b/apps/bob-pay/.env.test
@@ -13,6 +13,9 @@ NEXT_PUBLIC_INDEXER_URL="https://api.goldsky.com/api/public/project_clto8zgmd1jb
 
 NEXT_COINGECKO_API_KEY=
 
+NEXT_PUBLIC_GTM_ID=
+NEXT_PUBLIC_GA_ID=
+
 # SENTRY - SOURCE MAPS UPLOAD
 SENTRY_AUTH_TOKEN=
 
