--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -22,6 +22,10 @@ NEXT_PUBLIC_BTC_API_URL=https://btc-testnet.gobob.xyz/
 NEXT_PUBLIC_GATEWAY_API_URL="https://gateway-api-mainnet.gobob.xyz"
 NEXT_PUBLIC_BTC_API_URL="https://btc-mainnet.gobob.xyz"
 
+# ANALYTICS
+NEXT_PUBLIC_GTM_ID=
+NEXT_PUBLIC_GA_ID=
+
 # SENTRY - SOURCE MAPS UPLOAD
 SENTRY_AUTH_TOKEN=
 
