--- a/apps/evm/.env.test
+++ b/apps/evm/.env.test
@@ -6,8 +6,9 @@ NEXT_PUBLIC_L2_CHAIN="808813"
 NEXT_COINGECKO_API_KEY=
 NEXT_PUBLIC_GEOBLOCK_ENABLED=false
 NEXT_PUBLIC_INDEXER_URL=
-NEXT_PUBLIC_SENTRY_AUTH_TOKEN=
 NEXT_PUBLIC_SENTRY_URL=
+NEXT_PUBLIC_GTM_ID=
+NEXT_PUBLIC_GA_ID=
 SENTRY_AUTH_TOKEN=
 KV_REST_API_URL=
 KV_REST_API_TOKEN=
