--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -35,18 +35,19 @@
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "catalog:",
     "@sentry/nextjs": "catalog:",
-    "@tanstack/react-store": "catalog:",
     "@tanstack/react-query": "catalog:",
+    "@tanstack/react-store": "catalog:",
+    "@tanstack/react-virtual": "catalog:",
     "@vercel/kv": "catalog:",
     "@wagmi/core": "catalog:",
     "big.js": "catalog:",
     "date-fns": "catalog:",
     "graphql-request": "catalog:",
     "lottie-react": "^2.4.0",
-    "react-calendly": "^4.3.1",
     "negotiator": "catalog:",
     "next": "catalog:",
     "react": "catalog:",
+    "react-calendly": "^4.3.1",
     "react-dom": "catalog:",
     "react-jazzicon": "^1.0.4",
     "react-multi-carousel": "^2.8.5",
@@ -56,8 +57,8 @@
     "use-count-up": "^3.0.1",
     "usehooks-ts": "catalog:",
     "viem": "catalog:",
-    "yup": "catalog:",
-    "wagmi": "catalog:"
+    "wagmi": "catalog:",
+    "yup": "catalog:"
   },
   "devDependencies": {
     "@gobob/test-utils": "workspace:^",
