feat(evm): add profile drawer

--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -41,6 +41,7 @@
     "@vercel/kv": "catalog:",
     "@wagmi/core": "catalog:",
     "big.js": "catalog:",
+    "boring-avatars": "^1.11.2",
     "date-fns": "catalog:",
     "graphql-request": "catalog:",
     "lottie-react": "^2.4.0",
@@ -49,9 +50,9 @@
     "react": "catalog:",
     "react-calendly": "^4.3.1",
     "react-dom": "catalog:",
-    "react-jazzicon": "^1.0.4",
     "react-multi-carousel": "^2.8.5",
     "react-otp-input": "^3.1.1",
+    "react-qr-code": "^2.0.12",
     "siwe": "^2.1.4",
     "styled-components": "catalog:",
     "use-count-up": "^3.0.1",
