feat(evm): add turnstile

--- a/apps/evm/.env.example
+++ b/apps/evm/.env.example
@@ -33,3 +33,6 @@ SENTRY_AUTH_TOKEN=
 # REDIS CACHE
 KV_REST_API_URL="https://communal-hen-23354.upstash.io"
 KV_REST_API_TOKEN=
+
+
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=
