--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -17,12 +17,17 @@
   },
   "dependencies": {
     "@binance/w3w-wagmi-connector-v2": "1.2.4-alpha.0",
+    "@dynamic-labs/bitcoin": "^3.6.2",
+    "@dynamic-labs/ethereum": "^3.6.2",
+    "@dynamic-labs/iconic": "^3.6.2",
+    "@dynamic-labs/sdk-react-core": "^3.6.2",
+    "@dynamic-labs/wagmi-connector": "^3.6.2",
+    "@dynamic-labs/wallet-book": "^3.8.5",
     "@gobob/bob-sdk": "^3.1.2",
     "@gobob/chains": "workspace:^",
     "@gobob/currency": "workspace:^",
     "@gobob/hooks": "workspace:^",
     "@gobob/icons": "workspace:^",
-    "@gobob/sats-wagmi": "workspace:^",
     "@gobob/tokens": "workspace:^",
     "@gobob/ui": "workspace:^",
     "@gobob/utils": "workspace:^",
@@ -34,12 +39,15 @@
     "@react-aria/interactions": "catalog:",
     "@react-aria/label": "^3.7.6",
     "@react-aria/utils": "catalog:",
+    "@scure/base": "^1.1.9",
+    "@scure/btc-signer": "^1.4.0",
     "@sentry/nextjs": "catalog:",
     "@tanstack/react-query": "catalog:",
     "@tanstack/react-store": "catalog:",
     "@vercel/kv": "catalog:",
     "@wagmi/core": "catalog:",
     "big.js": "catalog:",
+    "bitcoin-address-validation": "catalog:",
     "boring-avatars": "^1.11.2",
     "date-fns": "catalog:",
     "graphql-request": "catalog:",
