--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -44,6 +44,8 @@ catalog:
   viem: ^2.21.35
   '@wagmi/core': ^2.11.0
 
+  bitcoin-address-validation: ^2.2.3
+
   '@tanstack/react-store': ^0.5.6
   '@tanstack/react-query': ^5.35.1
 
